tests/baselines/reference/parserObjectCreation1.errors.txt
==== tests/cases/compiler/parserObjectCreation1.ts (1 errors) ====
    var autoToken: number[] = new Array<number[]>(1);
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! parserObjectCreation1.ts(1,5): error TS2012: Type 'number[][]' is not assignable to type 'number[]':
!!! 	Types of property 'pop' of types 'number[][]' and 'number[]' are incompatible:
!!! 		Call signatures of types '() => number[]' and '() => number' are incompatible.